--- a/java02_Method/.project
+++ b/java02_Method/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>java02_injection</name>
+	<name>java02_Method</name>
 	<comment></comment>
 	<projects>
 	</projects>
